--- a/build.gradle
+++ b/build.gradle
@@ -67,7 +67,7 @@ task rpm() << {
         if (it.file.isDirectory() && !it.file.name.equals(".svn")) {
             rpmBuilder.addDirectory("/opt/asm-deployer/${it.path}", 0755, Directive.NONE, 'root', 'razor', false)
         } else if (it.file.isFile()) {
-            rpmBuilder.addFile("/opt/asm-deployer/${it.path}", it.file, 0644, Directive.NONE, 'root', 'razor')
+            rpmBuilder.addFile("/opt/asm-deployer/${it.path}", it.file, it.mode, Directive.NONE, 'root', 'razor')
         }
     }
 
