--- a/build.gradle
+++ b/build.gradle
@@ -67,7 +67,12 @@ task rpm() << {
         if (it.file.isDirectory() && !it.file.name.equals(".svn")) {
             rpmBuilder.addDirectory("/opt/asm-deployer/${it.path}", 0755, Directive.NONE, 'root', 'razor', false)
         } else if (it.file.isFile()) {
-            rpmBuilder.addFile("/opt/asm-deployer/${it.path}", it.file, it.mode, Directive.NONE, 'root', 'razor')
+            if ('lib/asm/scvmm_macaddress.rb' == it.path || 
+                'scripts/puppet_certname.sh' == it.path) { 
+                rpmBuilder.addFile("/opt/asm-deployer/${it.path}", it.file, 0755, Directive.NONE, 'root', 'razor')
+            } else {
+                rpmBuilder.addFile("/opt/asm-deployer/${it.path}", it.file, 0644, Directive.NONE, 'root', 'razor')
+            }
         }
     }
 
