--- a/build.gradle
+++ b/build.gradle
@@ -73,6 +73,8 @@ task rpm() << {
             if ('lib/asm/scvmm_macaddress.rb' == it.path || 
                 'scripts/puppet_certname.sh' == it.path) { 
                 rpmBuilder.addFile("/opt/asm-deployer/${it.path}", it.file, 0755, Directive.NONE, 'root', 'razor')
+            } else if (it.path == "nagios/nagios-export.rb") {
+                rpmBuilder.addFile("/opt/asm-deployer/${it.path}", it.file, 0755, Directive.NONE, 'root', 'root')
             } else if (it.path == "nagios/check-racadm.rb") {
                 rpmBuilder.addFile("/usr/lib64/nagios/plugins/check-racadm.rb", it.file, 0755, Directive.NONE, 'root', 'root')
             } else if (it.path == "nagios/check-wsman.rb") {
@@ -80,7 +82,7 @@ task rpm() << {
             } else if (it.path == "nagios/process_perf_data.rb") {
                 rpmBuilder.addFile("/usr/lib64/nagios/plugins/process_perf_data.rb", it.file, 0755, Directive.NONE, 'root', 'root')
             } else if (it.path == "nagios/asm_nagios.cron") {
-                rpmBuilder.addFile("/etc/cron.d/asm_nagios", it.file, 0755, Directive.NONE, 'root', 'root')
+                rpmBuilder.addFile("/etc/cron.d/asm_nagios", it.file, 0644, Directive.NONE, 'root', 'root')
             } else {
                 rpmBuilder.addFile("/opt/asm-deployer/${it.path}", it.file, 0644, Directive.NONE, 'root', 'razor')
             }
