ASM-2446: Add the check-ipmi and ipmitool dependency
Installs the check-ipmi.rb nagios check in the right place and pulls in
the dependency

--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ task rpm() << {
         rpmDestinationDirectory.mkdirs()
     }
 
-    // write dell product version and release to a properties file 
+    // write dell product version and release to a properties file
     // and to a profile.d file and include that file in the rpm
     File productPropertiesFile = new File("${buildDir}/${project.rpm_packageName}.properties")
     productPropertiesFile << "VERSION=$project.rpm_version\n"
@@ -57,6 +57,9 @@ task rpm() << {
     // Depends on nagios rpm to bring the correctly selinux tagged plugin dirs etc
     rpmBuilder.addDependencyMore('nagios-common', '3.5.1')
 
+    // Dependencies for the nagios plugins
+    rpmBuilder.addDependencyMore('ipmitool', '1.8.11')
+
     // Directory where REST service will write deployment information
     rpmBuilder.addDirectory("/opt/Dell/ASM/deployments", 0775, Directive.NONE, 'razor', 'razor', false)
 
@@ -70,12 +73,14 @@ task rpm() << {
         if (it.file.isDirectory() && !it.file.name.equals(".svn")) {
             rpmBuilder.addDirectory("/opt/asm-deployer/${it.path}", 0755, Directive.NONE, 'root', 'razor', false)
         } else if (it.file.isFile()) {
-            if ('lib/asm/scvmm_cluster_ip.rb' == it.path || 
-                'lib/asm/scvmm_macaddress.rb' == it.path || 
-                'scripts/puppet_certname.sh' == it.path) { 
+            if ('lib/asm/scvmm_cluster_ip.rb' == it.path ||
+                'lib/asm/scvmm_macaddress.rb' == it.path ||
+                'scripts/puppet_certname.sh' == it.path) {
                 rpmBuilder.addFile("/opt/asm-deployer/${it.path}", it.file, 0755, Directive.NONE, 'root', 'razor')
             } else if (it.path == "nagios/nagios-export.rb") {
                 rpmBuilder.addFile("/opt/asm-deployer/${it.path}", it.file, 0755, Directive.NONE, 'root', 'root')
+            } else if (it.path == "nagios/check-ipmi.rb") {
+                rpmBuilder.addFile("/usr/lib64/nagios/plugins/check-ipmi.rb", it.file, 0755, Directive.NONE, 'root', 'root')
             } else if (it.path == "nagios/check-racadm.rb") {
                 rpmBuilder.addFile("/usr/lib64/nagios/plugins/check-racadm.rb", it.file, 0755, Directive.NONE, 'root', 'root')
             } else if (it.path == "nagios/check-wsman.rb") {
