--- a/build.gradle
+++ b/build.gradle
@@ -58,7 +58,7 @@ task rpm() << {
     rpmBuilder.addDependencyMore('nagios-common', '3.5.1')
 
     // Dependencies for the nagios plugins
-    rpmBuilder.addDependencyMore('ipmitool', '1.8.11')
+    rpmBuilder.addDependencyMore('freeipmi', '1.2.1')
 
     // Directory where REST service will write deployment information
     rpmBuilder.addDirectory("/opt/Dell/ASM/deployments", 0775, Directive.NONE, 'razor', 'razor', false)
