ASM-2737: Fix perms on decrypt helper for esxi check
The script used by the python tool to decrypt asm passwords was not
executable

--- a/build.gradle
+++ b/build.gradle
@@ -80,6 +80,7 @@ task rpm() << {
             if ('lib/asm/scvmm_cluster_ip.rb' == it.path ||
                 'lib/asm/scvmm_macaddress.rb' == it.path ||
                 'scripts/puppet_certname.sh' == it.path) {
+                'scripts/decrypt_secretid.rb' == it.path) {
                 rpmBuilder.addFile("/opt/asm-deployer/${it.path}", it.file, 0755, Directive.NONE, 'root', 'razor')
             } else if (it.path == "nagios/nagios-export.rb") {
                 rpmBuilder.addFile("/opt/asm-deployer/${it.path}", it.file, 0755, Directive.NONE, 'root', 'root')
