--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ buildscript {
         rpm_packageName = env.RPM_PACKAGENAME ? env.RPM_PACKAGENAME : 'Dell-ASM-asm-deployer'
         rpm_description = env.RPM_DESCRIPTION ? env.RPM_DESCRIPTION : 'asm-deployer for Dell ASM'
         rpm_summary = env.RPM_SUMMARY ? env.RPM_SUMMARY : 'asm-deployer for Dell ASM'
-        rpm_version = env.RPM_VERSION ? env.RPM_VERSION : '7.5.0'
+        rpm_version = env.RPM_VERSION ? env.RPM_VERSION : '8.2.0'
         rpm_vendor = env.RPM_VENDOR ? env.RPM_VENDOR : 'Dell, Inc.'
         rpm_url = env.RPM_URL ? env.RPM_URL : 'http://www.dell.com/'
         rpm_license = env.RPM_LICENSE ? env.RPM_LICENSE : 'DELL END USER LICENSE AGREEMENT - TYPE A'
@@ -102,6 +102,9 @@ task rpm(dependsOn: copyAsmDeployer) << {
     // so that different users can't clobber each other's files. Longer-term the scvmm script
     // should also be run by puppet-script-device and then this could be owned by razor:razor 0755
     rpmBuilder.addDirectory("/opt/Dell/ASM/cache", 01777, Directive.NONE, 'root', 'root', false)
+
+    // Directory for add on puppet modules
+    rpmBuilder.addDirectory("/opt/Dell/ASM/modules", 0755, Directive.NONE, 'nobody', 'nobody', false)
 
     // Install directory.
     // Installed as root:razor with 0775 so that torquebox can write the Gemfile.lock file.
