--- a/build.gradle
+++ b/build.gradle
@@ -87,6 +87,9 @@ task rpm(dependsOn: copyAsmDeployer) << {
     rpmBuilder.addDependencyMore('python-whisper', '0.9.12')
     rpmBuilder.addDependencyMore('python-carbon', '0.9.12')
 
+    // iPXE source code for building iPXE ISOs
+    rpmBuilder.addDependencyMore('ipxe-devel', '20160117')
+
     // Directory where REST service will write deployment information
     rpmBuilder.addDirectory("/opt/Dell/ASM/deployments", 0775, Directive.NONE, 'razor', 'razor', false)
 
