--- a/build.gradle
+++ b/build.gradle
@@ -88,7 +88,7 @@ task rpm(dependsOn: copyAsmDeployer) << {
     rpmBuilder.addDependencyMore('python-carbon', '0.9.12')
 
     // iPXE source code for building iPXE ISOs
-    rpmBuilder.addDependencyMore('Dell-ASM-ipxe-devel', project.rpm_version)
+    rpmBuilder.addDependencyMore('ipxe-devel', '20160117')
 
     // Directory where REST service will write deployment information
     rpmBuilder.addDirectory("/opt/Dell/ASM/deployments", 0775, Directive.NONE, 'razor', 'razor', false)
