--- a/build.gradle
+++ b/build.gradle
@@ -127,6 +127,8 @@ task rpm(dependsOn: copyAsmDeployer) << {
                 'lib/asm/winrm_reconfigure.rb' == it.path ||
                 it.path.startsWith('scripts/')) {
                 rpmBuilder.addFile("/opt/asm-deployer/${it.path}", it.file, 0755, Directive.NONE, 'root', 'razor')
+            } else if (it.path == "asm-deployer.init") {
+                rpmBuilder.addFile("/etc/init.d/asm-deployer", it.file, 0755, Directive.NONE, 'root', 'root')
             } else if (it.path == "nagios/nagios-export.rb") {
                 rpmBuilder.addFile("/opt/asm-deployer/${it.path}", it.file, 0755, Directive.NONE, 'root', 'root')
             } else if (it.path == "nagios/poll_idrac8_sensors.rb") {
