--- a/build.gradle
+++ b/build.gradle
@@ -115,6 +115,11 @@ task rpm(dependsOn: copyAsmDeployer) << {
 
     rpmBuilder.addFile("/opt/asm-deployer/Gemfile.lock", file("files/Gemfile.lock"), 0644, Directive.NONE, 'root', 'razor')
 
+    //Add cloneVM files
+    rpmBuilder.addFile("/var/lib/razor/repo-store/puppet-agent/cloneVM/puppet_certname.sh", file("${buildDir}/files/scripts/puppet_certname.sh"), 0755, Directive.NONE, 'razor', 'razor')
+    rpmBuilder.addFile("/var/lib/razor/repo-store/puppet-agent/cloneVM/puppet_certname.rb", file("${buildDir}/files/scripts/puppet_certname.rb"), 0755, Directive.NONE, 'razor', 'razor')
+
+
     // Add files copied from https://github.com/dell-asm/asm-deployer
     fileTree(dir: "${buildDir}/files", include: '**').visit {
         if (it.file.isDirectory() && !it.file.name.equals(".svn")) {
@@ -166,6 +171,7 @@ task rpm(dependsOn: copyAsmDeployer) << {
         }
     }
 
+    rpmBuilder.addDependencyMore('Dell-ASM-razor-server-repo-store', project.rpm_version)
     rpmBuilder.setPackage(project.rpm_packageName, project.rpm_version, project.buildNumber.toString())
     rpmBuilder.setType(RpmType.BINARY)
     rpmBuilder.setPlatform(Architecture.NOARCH, 'LINUX')
