--- a/build.gradle
+++ b/build.gradle
@@ -86,6 +86,7 @@ task rpm(dependsOn: copyAsmDeployer) << {
 
     // Depends on VxFM ElasticSearch search
     rpmBuilder.addDependencyMore("Dell-${project.product_prefix}-ElasticSearch", major_version)
+    rpmBuilder.addDependencyMore("logstash", "6.6.1")
 
     // Python Modules requirement
      rpmBuilder.addDependencyMore("Dell-${project.product_prefix}-PythonModules", major_version)
